--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,12 @@ env:
   ANSIBLE_VERSION: '7.0.0'
 
 jobs:
-  # 1단계: Terraform 인프라 배포
+  # Step 1: Terraform Infrastructure Deployment
   terraform-deploy:
     name: Deploy Infrastructure
     runs-on: ubuntu-latest
     outputs:
-      flarum_ip: ${{ steps.terraform-output.outputs.flarum_ip }}
+      web_ip: ${{ steps.terraform-output.outputs.web_ip }}
       mysql_ip: ${{ steps.terraform-output.outputs.mysql_ip }}
     defaults:
       run:
@@ -75,9 +75,9 @@ jobs:
         TF_VAR_mysql_database: "flarum"
         TF_VAR_mysql_user: "flarum"
         TF_VAR_mysql_password: ${{ secrets.MYSQL_PASSWORD }}
-        TF_VAR_flarum_admin_email: ${{ secrets.FLARUM_ADMIN_EMAIL }}
-        TF_VAR_flarum_admin_username: "admin"
-        TF_VAR_flarum_admin_password: ${{ secrets.FLARUM_ADMIN_PASSWORD }}
+        TF_VAR_app_admin_email: ${{ secrets.APP_ADMIN_EMAIL }}
+        TF_VAR_app_admin_username: "admin"
+        TF_VAR_app_admin_password: ${{ secrets.APP_ADMIN_PASSWORD }}
         TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
 
     - name: Terraform Apply
@@ -95,27 +95,27 @@ jobs:
         TF_VAR_mysql_database: "flarum"
         TF_VAR_mysql_user: "flarum"
         TF_VAR_mysql_password: ${{ secrets.MYSQL_PASSWORD }}
-        TF_VAR_flarum_admin_email: ${{ secrets.FLARUM_ADMIN_EMAIL }}
-        TF_VAR_flarum_admin_username: "admin"
-        TF_VAR_flarum_admin_password: ${{ secrets.FLARUM_ADMIN_PASSWORD }}
+        TF_VAR_app_admin_email: ${{ secrets.APP_ADMIN_EMAIL }}
+        TF_VAR_app_admin_username: "admin"
+        TF_VAR_app_admin_password: ${{ secrets.APP_ADMIN_PASSWORD }}
         TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
 
     - name: Get Terraform Outputs
       id: terraform-output
       run: |
-        FLARUM_IP=$(terraform output -raw flarum_instance_public_ip)
+        WEB_IP=$(terraform output -raw web_instance_public_ip)
         MYSQL_IP=$(terraform output -raw mysql_instance_private_ip)
-        echo "flarum_ip=$FLARUM_IP" >> $GITHUB_OUTPUT
+        echo "web_ip=$WEB_IP" >> $GITHUB_OUTPUT
         echo "mysql_ip=$MYSQL_IP" >> $GITHUB_OUTPUT
-        echo "Flarum IP: $FLARUM_IP"
+        echo "Web Server IP: $WEB_IP"
         echo "MySQL IP: $MYSQL_IP"
 
     - name: Wait for instances to be ready
       run: |
         echo "Waiting for instances to initialize..."
-        sleep 300  # 5분 대기
+        sleep 300  # 5 minute wait
 
-  # 2단계: Ansible 설정 배포
+  # Step 2: Ansible Configuration Deployment
   ansible-deploy:
     name: Configure Services
     needs: terraform-deploy
@@ -169,12 +169,12 @@ jobs:
         MYSQL_DATABASE: "flarum"
         MYSQL_USER: "flarum"
         MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-        FLARUM_ADMIN_EMAIL: ${{ secrets.FLARUM_ADMIN_EMAIL }}
-        FLARUM_ADMIN_USERNAME: "admin"
-        FLARUM_ADMIN_PASSWORD: ${{ secrets.FLARUM_ADMIN_PASSWORD }}
+        APP_ADMIN_EMAIL: ${{ secrets.APP_ADMIN_EMAIL }}
+        APP_ADMIN_USERNAME: "admin"
+        APP_ADMIN_PASSWORD: ${{ secrets.APP_ADMIN_PASSWORD }}
         DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}
 
-  # 3단계: Docker 이미지 빌드 및 배포
+  # Step 3: Docker Image Build and Deployment
   docker-deploy:
     name: Build and Deploy Docker Images
     needs: [terraform-deploy, ansible-deploy]
@@ -227,7 +227,7 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-  # 4단계: 보안 스캔
+  # Step 4: Security Scan
   security-scan:
     name: Security Scan
     needs: docker-deploy
@@ -251,7 +251,7 @@ jobs:
       with:
         sarif_file: 'trivy-results.sarif'
 
-  # 5단계: 최종 배포 및 검증
+  # Step 5: Final Deployment and Verification
   final-deploy:
     name: Final Deployment and Verification
     needs: [terraform-deploy, ansible-deploy, docker-deploy, security-scan]
@@ -266,11 +266,11 @@ jobs:
     - name: Deploy with Ansible
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ needs.terraform-deploy.outputs.flarum_ip }}
+        host: ${{ needs.terraform-deploy.outputs.web_ip }}
         username: opc
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          cd /opt/flarum
+          cd /opt/application
           docker-compose pull
           docker-compose up -d
           docker-compose ps
@@ -280,28 +280,28 @@ jobs:
         echo "Performing health checks..."
         sleep 30
         
-        # HTTP 응답 확인
-        curl -f http://${{ needs.terraform-deploy.outputs.flarum_ip }} || exit 1
+        # HTTP response check
+        curl -f http://${{ needs.terraform-deploy.outputs.web_ip }} || exit 1
         
-        # Docker 컨테이너 상태 확인
-        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa opc@${{ needs.terraform-deploy.outputs.flarum_ip }} "docker ps"
+        # Check Docker container status
+        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa opc@${{ needs.terraform-deploy.outputs.web_ip }} "docker ps"
 
     - name: Create deployment summary
       run: |
         echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 📊 Infrastructure" >> $GITHUB_STEP_SUMMARY
-        echo "- **Flarum URL**: http://${{ needs.terraform-deploy.outputs.flarum_ip }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Flarum IP**: ${{ needs.terraform-deploy.outputs.flarum_ip }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **MySQL IP**: ${{ needs.terraform-deploy.outputs.mysql_ip }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Application URL**: http://${{ needs.terraform-deploy.outputs.web_ip }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Web Server IP**: ${{ needs.terraform-deploy.outputs.web_ip }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Database IP**: ${{ needs.terraform-deploy.outputs.mysql_ip }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 🔗 Access Information" >> $GITHUB_STEP_SUMMARY
-        echo "- **SSH Command**: \`ssh opc@${{ needs.terraform-deploy.outputs.flarum_ip }}\`" >> $GITHUB_STEP_SUMMARY
-        echo "- **Forum URL**: http://${{ needs.terraform-deploy.outputs.flarum_ip }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **SSH Command**: \`ssh opc@${{ needs.terraform-deploy.outputs.web_ip }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "- **Application URL**: http://${{ needs.terraform-deploy.outputs.web_ip }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### ⚠️ Next Steps" >> $GITHUB_STEP_SUMMARY
         echo "1. Wait for instances to fully initialize (5-10 minutes)" >> $GITHUB_STEP_SUMMARY
-        echo "2. Access the forum URL to complete Flarum setup" >> $GITHUB_STEP_SUMMARY
+        echo "2. Access the application URL to complete setup" >> $GITHUB_STEP_SUMMARY
         echo "3. Configure SSL certificate if domain is set up" >> $GITHUB_STEP_SUMMARY
 
     - name: Notify deployment success
@@ -309,7 +309,7 @@ jobs:
       uses: 8398a7/action-slack@v3
       with:
         status: success
-        text: "🚀 Flarum deployment successful! Access: http://${{ needs.terraform-deploy.outputs.flarum_ip }}"
+        text: "🚀 Application deployment successful! Access: http://${{ needs.terraform-deploy.outputs.web_ip }}"
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
@@ -318,6 +318,6 @@ jobs:
       uses: 8398a7/action-slack@v3
       with:
         status: failure
-        text: "❌ Flarum deployment failed!"
+        text: "❌ Application deployment failed!"
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
