Fix OCI CLI installation in GitHub Actions
- Download install script first, then run with --accept-all-defaults
- Avoid issues with bash -c and parameter passing
- Ensure proper OCI CLI installation in CI/CD environment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,9 @@ jobs:
 
       - name: Setup OCI CLI
         run: |
-          bash -c "$(curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh)" --accept-all-defaults
+          curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh -o install.sh
+          chmod +x install.sh
+          ./install.sh --accept-all-defaults
           echo "$HOME/bin" >> $GITHUB_PATH
 
       - name: Configure OCI CLI
