--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -41,12 +41,14 @@ jobs:
 
     - name: Setup OCI CLI
       run: |
-        bash -c "$(curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh)" --accept-all-defaults
+        curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh -o install.sh
+        chmod +x install.sh
+        ./install.sh --accept-all-defaults
         echo "$HOME/bin" >> $GITHUB_PATH
 
     - name: Configure OCI CLI
       run: |
-        oci setup config --token-version 2.0.0 --region ${{ secrets.OCI_REGION }} --tenancy-id ${{ secrets.OCI_TENANCY_OCID }} --user-id ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
+        oci setup config --region ${{ secrets.OCI_REGION }} --tenancy ${{ secrets.OCI_TENANCY_OCID }} --user ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
       env:
         OCI_CLI_AUTH: api_key
 
@@ -107,12 +109,14 @@ jobs:
 
     - name: Setup OCI CLI
       run: |
-        bash -c "$(curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh)" --accept-all-defaults
+        curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh -o install.sh
+        chmod +x install.sh
+        ./install.sh --accept-all-defaults
         echo "$HOME/bin" >> $GITHUB_PATH
 
     - name: Configure OCI CLI
       run: |
-        oci setup config --token-version 2.0.0 --region ${{ secrets.OCI_REGION }} --tenancy-id ${{ secrets.OCI_TENANCY_OCID }} --user-id ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
+        oci setup config --region ${{ secrets.OCI_REGION }} --tenancy ${{ secrets.OCI_TENANCY_OCID }} --user ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
       env:
         OCI_CLI_AUTH: api_key
 
@@ -211,12 +215,14 @@ jobs:
 
     - name: Setup OCI CLI
       run: |
-        bash -c "$(curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh)" --accept-all-defaults
+        curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh -o install.sh
+        chmod +x install.sh
+        ./install.sh --accept-all-defaults
         echo "$HOME/bin" >> $GITHUB_PATH
 
     - name: Configure OCI CLI
       run: |
-        oci setup config --token-version 2.0.0 --region ${{ secrets.OCI_REGION }} --tenancy-id ${{ secrets.OCI_TENANCY_OCID }} --user-id ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
+        oci setup config --region ${{ secrets.OCI_REGION }} --tenancy ${{ secrets.OCI_TENANCY_OCID }} --user ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
       env:
         OCI_CLI_AUTH: api_key
 
