--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -46,11 +46,19 @@ jobs:
           ./install.sh --accept-all-defaults
           echo "$HOME/bin" >> $GITHUB_PATH
 
-      - name: Configure OCI CLI
-        run: |
-           oci setup config --region ${{ secrets.OCI_REGION }} --tenancy-id ${{ secrets.OCI_TENANCY_OCID }} --user-id ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
-        env:
-          OCI_CLI_AUTH: api_key
+       - name: Configure OCI CLI
+         run: |
+           mkdir -p ~/.oci
+           cat > ~/.oci/config << EOF
+           [DEFAULT]
+           user=${{ secrets.OCI_USER_OCID }}
+           fingerprint=${{ secrets.OCI_FINGERPRINT }}
+           key_file=~/.oci/oci_api_key.pem
+           tenancy=${{ secrets.OCI_TENANCY_OCID }}
+           region=${{ secrets.OCI_REGION }}
+           EOF
+         env:
+           OCI_CLI_AUTH: api_key
 
       - name: Create OCI API Key file
         run: |
@@ -114,11 +122,19 @@ jobs:
           ./install.sh --accept-all-defaults
           echo "$HOME/bin" >> $GITHUB_PATH
 
-      - name: Configure OCI CLI
-        run: |
-           oci setup config --region ${{ secrets.OCI_REGION }} --tenancy-id ${{ secrets.OCI_TENANCY_OCID }} --user-id ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
-        env:
-          OCI_CLI_AUTH: api_key
+       - name: Configure OCI CLI
+         run: |
+           mkdir -p ~/.oci
+           cat > ~/.oci/config << EOF
+           [DEFAULT]
+           user=${{ secrets.OCI_USER_OCID }}
+           fingerprint=${{ secrets.OCI_FINGERPRINT }}
+           key_file=~/.oci/oci_api_key.pem
+           tenancy=${{ secrets.OCI_TENANCY_OCID }}
+           region=${{ secrets.OCI_REGION }}
+           EOF
+         env:
+           OCI_CLI_AUTH: api_key
 
       - name: Create OCI API Key file
         run: |
@@ -220,11 +236,19 @@ jobs:
           ./install.sh --accept-all-defaults
           echo "$HOME/bin" >> $GITHUB_PATH
 
-      - name: Configure OCI CLI
-        run: |
-           oci setup config --region ${{ secrets.OCI_REGION }} --tenancy-id ${{ secrets.OCI_TENANCY_OCID }} --user-id ${{ secrets.OCI_USER_OCID }} --fingerprint ${{ secrets.OCI_FINGERPRINT }} --key-file ~/.oci/oci_api_key.pem
-        env:
-          OCI_CLI_AUTH: api_key
+       - name: Configure OCI CLI
+         run: |
+           mkdir -p ~/.oci
+           cat > ~/.oci/config << EOF
+           [DEFAULT]
+           user=${{ secrets.OCI_USER_OCID }}
+           fingerprint=${{ secrets.OCI_FINGERPRINT }}
+           key_file=~/.oci/oci_api_key.pem
+           tenancy=${{ secrets.OCI_TENANCY_OCID }}
+           region=${{ secrets.OCI_REGION }}
+           EOF
+         env:
+           OCI_CLI_AUTH: api_key
 
       - name: Create OCI API Key file
         run: |
