Remove terraform.tfvars dependency from GitHub Actions
- Use environment variables instead of terraform.tfvars file
- Improve security by not storing sensitive values in files
- Remove -var-file parameter from terraform plan command
- Ensure all Terraform variables are passed via GitHub Secrets

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      - name: Terraform Plan
-        run: terraform plan -var-file="terraform.tfvars" -out=tfplan
+       - name: Terraform Plan
+         run: terraform plan -out=tfplan
         env:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
           TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
