--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Get Terraform Outputs
         id: terraform-output
         run: |
-          WEB_IP=$(terraform output -raw web_instance_public_ip)
+          WEB_IP=$(terraform output -raw flarum_instance_public_ip)
           MYSQL_IP=$(terraform output -raw mysql_instance_private_ip)
           echo "web_ip=$WEB_IP" >> $GITHUB_OUTPUT
           echo "mysql_ip=$MYSQL_IP" >> $GITHUB_OUTPUT
@@ -123,7 +123,7 @@ jobs:
       - name: Wait for instances to be ready
         run: |
           echo "Waiting for instances to initialize..."
-          sleep 300  # 5 minute wait
+          sleep 600  # 10 minute wait for full initialization
 
   # Step 2: Ansible Configuration Deployment
   ansible-deploy:
@@ -155,6 +155,8 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_rsa
 
       - name: Add host to known_hosts
         run: |
@@ -251,7 +253,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/${{ github.repository }}:${{ github.sha }}
+          image-ref: ghcr.io/${{ github.repository }}:latest
           format: "sarif"
           output: "trivy-results.sarif"
 
@@ -284,6 +286,13 @@ jobs:
             docker-compose pull
             docker-compose up -d
             docker-compose ps
+
+      - name: Setup SSH for Health Check
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ needs.terraform-deploy.outputs.web_ip }} >> ~/.ssh/known_hosts
 
       - name: Health Check
         run: |
