Convert to single instance deployment
- Remove MySQL instance from Terraform
- Use Docker container for MySQL on same instance
- Update outputs to reflect single instance architecture
- Fix GitHub Actions workflows for single instance
- Resolve OCI Always Free Tier limit exceeded error
- Reduce resource usage and simplify deployment

Changes:
- main.tf: Remove mysql_instance resource
- outputs.tf: Update MySQL connection info to localhost
- main.yml: Update terraform outputs for single instance
- terraform-deploy.yml: Update deployment summary
- Docker Compose already includes MySQL container

Benefits:
- Uses only 1 VM.Standard.E2.1.Micro instance
- Stays within OCI Always Free Tier limits
- Simpler architecture with MySQL as Docker container
- Reduced network complexity

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,11 +114,10 @@ jobs:
         id: terraform-output
         run: |
           WEB_IP=$(terraform output -raw flarum_instance_public_ip)
-          MYSQL_IP=$(terraform output -raw mysql_instance_private_ip)
           echo "web_ip=$WEB_IP" >> $GITHUB_OUTPUT
-          echo "mysql_ip=$MYSQL_IP" >> $GITHUB_OUTPUT
+          echo "mysql_ip=localhost" >> $GITHUB_OUTPUT
           echo "Web Server IP: $WEB_IP"
-          echo "MySQL IP: $MYSQL_IP"
+          echo "MySQL: localhost (Docker container)"
 
       - name: Wait for instances to be ready
         run: |
