--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,21 +151,66 @@ jobs:
       - name: Create SSH key file
         run: |
           mkdir -p ~/.ssh
+          # Create SSH key with proper formatting
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          
+          # Check if key file exists and has content
+          if [ ! -s ~/.ssh/id_rsa ]; then
+            echo "ERROR: SSH private key file is empty or missing"
+            exit 1
+          fi
+          
+          # Check if key starts with proper header
+          if ! head -1 ~/.ssh/id_rsa | grep -q "BEGIN.*PRIVATE KEY"; then
+            echo "ERROR: SSH private key format is invalid"
+            echo "First line: $(head -1 ~/.ssh/id_rsa)"
+            exit 1
+          fi
+          
           # Validate SSH key format
-          ssh-keygen -l -f ~/.ssh/id_rsa || echo "SSH key validation failed"
+          if ! ssh-keygen -l -f ~/.ssh/id_rsa >/dev/null 2>&1; then
+            echo "ERROR: SSH key validation failed"
+            echo "Key content preview:"
+            head -3 ~/.ssh/id_rsa
+            exit 1
+          fi
+          
           # Generate public key
           ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
+          
           # Start SSH agent and add key
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_rsa
+          
           # Test SSH key
           ssh-add -l
 
-      - name: Add host to known_hosts
+      - name: Wait for instance to be ready
         run: |
-          ssh-keyscan -H ${{ needs.terraform-deploy.outputs.web_ip }} >> ~/.ssh/known_hosts
+          echo "Waiting for instance to be fully ready..."
+          sleep 120  # Wait 2 minutes for instance to fully initialize
+          
+      - name: Add host to known_hosts with retry
+        run: |
+          # Retry ssh-keyscan with timeout
+          for i in {1..5}; do
+            echo "Attempt $i: Adding host to known_hosts..."
+            if ssh-keyscan -H -T 10 ${{ needs.terraform-deploy.outputs.web_ip }} >> ~/.ssh/known_hosts 2>/dev/null; then
+              echo "Successfully added host to known_hosts"
+              break
+            else
+              echo "Attempt $i failed, waiting 30 seconds..."
+              sleep 30
+            fi
+          done
+          
+          # Verify known_hosts was updated
+          if grep -q "${{ needs.terraform-deploy.outputs.web_ip }}" ~/.ssh/known_hosts; then
+            echo "Host successfully added to known_hosts"
+          else
+            echo "WARNING: Failed to add host to known_hosts after 5 attempts"
+          fi
 
       - name: Create inventory file
         run: |
@@ -174,14 +219,23 @@ jobs:
           ${{ needs.terraform-deploy.outputs.web_ip }} ansible_user=opc ansible_ssh_private_key_file=~/.ssh/id_rsa
           EOF
 
-      - name: Test SSH connection
+      - name: Test SSH connection with retry
         run: |
-          # Test direct SSH connection first
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 opc@${{ needs.terraform-deploy.outputs.web_ip }} "echo 'SSH connection successful'"
-
+          # Test direct SSH connection with retry logic
+          for i in {1..3}; do
+            echo "SSH connection attempt $i..."
+            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=10 opc@${{ needs.terraform-deploy.outputs.web_ip }} "echo 'SSH connection successful'" 2>/dev/null; then
+              echo "SSH connection successful!"
+              break
+            else
+              echo "SSH connection attempt $i failed, waiting 30 seconds..."
+              sleep 30
+            fi
+          done
+          
       - name: Test Ansible connection
         run: |
-          ansible all -i inventory.ini -m ping --timeout=30
+          ansible all -i inventory.ini -m ping --timeout=30 -v
 
       - name: Run Ansible playbook
         run: |
