--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -154,20 +154,20 @@ jobs:
           # Create SSH key with proper formatting
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          
+
           # Check if key file exists and has content
           if [ ! -s ~/.ssh/id_rsa ]; then
             echo "ERROR: SSH private key file is empty or missing"
             exit 1
           fi
-          
+
           # Check if key starts with proper header
           if ! head -1 ~/.ssh/id_rsa | grep -q "BEGIN.*PRIVATE KEY"; then
             echo "ERROR: SSH private key format is invalid"
             echo "First line: $(head -1 ~/.ssh/id_rsa)"
             exit 1
           fi
-          
+
           # Validate SSH key format
           if ! ssh-keygen -l -f ~/.ssh/id_rsa >/dev/null 2>&1; then
             echo "ERROR: SSH key validation failed"
@@ -175,22 +175,31 @@ jobs:
             head -3 ~/.ssh/id_rsa
             exit 1
           fi
-          
+
           # Generate public key
           ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
-          
+
           # Start SSH agent and add key
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_rsa
-          
+
           # Test SSH key
           ssh-add -l
 
       - name: Wait for instance to be ready
         run: |
           echo "Waiting for instance to be fully ready..."
-          sleep 120  # Wait 2 minutes for instance to fully initialize
+          sleep 300  # Wait 5 minutes for instance to fully initialize
           
+      - name: Test instance connectivity
+        run: |
+          echo "Testing instance connectivity..."
+          # Test if instance is reachable
+          ping -c 3 ${{ needs.terraform-deploy.outputs.web_ip }} || echo "Ping failed, but continuing..."
+          
+          # Test if SSH port is open
+          nc -z -v ${{ needs.terraform-deploy.outputs.web_ip }} 22 || echo "SSH port test failed, but continuing..."
+
       - name: Add host to known_hosts with retry
         run: |
           # Retry ssh-keyscan with timeout
@@ -204,7 +213,7 @@ jobs:
               sleep 30
             fi
           done
-          
+
           # Verify known_hosts was updated
           if grep -q "${{ needs.terraform-deploy.outputs.web_ip }}" ~/.ssh/known_hosts; then
             echo "Host successfully added to known_hosts"
@@ -222,17 +231,17 @@ jobs:
       - name: Test SSH connection with retry
         run: |
           # Test direct SSH connection with retry logic
-          for i in {1..3}; do
+          for i in {1..5}; do
             echo "SSH connection attempt $i..."
-            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=10 opc@${{ needs.terraform-deploy.outputs.web_ip }} "echo 'SSH connection successful'" 2>/dev/null; then
+            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -o ServerAliveInterval=10 -o ServerAliveCountMax=3 opc@${{ needs.terraform-deploy.outputs.web_ip }} "echo 'SSH connection successful'" 2>/dev/null; then
               echo "SSH connection successful!"
               break
             else
-              echo "SSH connection attempt $i failed, waiting 30 seconds..."
-              sleep 30
+              echo "SSH connection attempt $i failed, waiting 60 seconds..."
+              sleep 60
             fi
           done
-          
+
       - name: Test Ansible connection
         run: |
           ansible all -i inventory.ini -m ping --timeout=30 -v
