Deploy Flarum with VM.Standard.E2.1.Micro (1 OCPU, 1GB RAM)
- Confirm VM.Standard.E2.1.Micro specifications: 1 OCPU, 1GB RAM
- Always Free Tier eligible in San Jose region
- Single instance deployment with MySQL container
- Ready for production Flarum community forum

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,9 @@ jobs:
           tenancy=${{ secrets.OCI_TENANCY_OCID }}
           region=${{ secrets.OCI_REGION }}
           EOF
+          
+          # Test OCI CLI authentication
+          oci iam user get --user-id ${{ secrets.OCI_USER_OCID }} || echo "OCI authentication test failed"
         env:
           OCI_CLI_AUTH: api_key
 
