Complete removal of Flarum admin configuration - show initial setup only
- Remove all FLARUM_ADMIN_EMAIL, FLARUM_ADMIN_USERNAME, FLARUM_ADMIN_PASSWORD, DOMAIN_NAME references
- Update ansible/playbook.yml to remove Flarum admin variables
- Update docker/flarum/flarum-setup.sh to show setup instructions only
- Update ansible/templates/env.j2 to remove Flarum admin config
- Update ansible/templates/docker-compose.yml.j2 to remove Flarum admin env vars
- Update terraform/terraform.tfvars.example to remove Flarum admin settings
- All files now show initial setup screen only - users complete setup via web interface

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,10 +7,6 @@
     mysql_database: "{{ MYSQL_DATABASE | default('flarum') }}"
     mysql_user: "{{ MYSQL_USER | default('flarum') }}"
     mysql_password: "{{ MYSQL_PASSWORD }}"
-    flarum_admin_email: "{{ FLARUM_ADMIN_EMAIL }}"
-    flarum_admin_username: "{{ FLARUM_ADMIN_USERNAME | default('admin') }}"
-    flarum_admin_password: "{{ FLARUM_ADMIN_PASSWORD }}"
-    domain_name: "{{ DOMAIN_NAME | default('') }}"
     flarum_data_dir: "/opt/flarum"
     docker_compose_version: "2.21.0"
 
@@ -117,20 +113,12 @@
         delay: 30
         timeout: 300
 
-    - name: Configure Flarum (if not already configured)
-      shell: |
-        cd {{ flarum_data_dir }}
-        ./configure-flarum.sh
-      become_user: opc
-      ignore_errors: yes
-
-    - name: Setup SSL certificate (if domain is provided)
-      shell: |
-        cd {{ flarum_data_dir }}
-        ./setup-ssl.sh
-      become_user: opc
-      when: domain_name != ""
-      ignore_errors: yes
+    - name: Display Flarum setup information
+      debug:
+        msg: |
+          Flarum is now running!
+          Access your forum at: http://{{ ansible_default_ipv4.address }}
+          Complete the initial setup through the web interface.
 
     - name: Create health check script
       template:
