Fix Ansible lint error for shell pipefail
- Add set -o pipefail to shell command with pipes
- This resolves the risky-shell-pipe lint violation
- Ensures proper error handling in shell commands with pipes

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,6 +13,7 @@
   tasks:
     - name: Create swap file for micro instance
       ansible.builtin.shell: |
+        set -o pipefail
         # Create 2GB swap file
         sudo fallocate -l 2G /swapfile
         sudo chmod 600 /swapfile
