Optimize Ansible playbook for micro instance performance
- Skip system package update (too slow on 1GB RAM instance)
- Install only essential packages in single dnf command
- Disable update_cache to speed up package installation
- This should significantly reduce deployment time from 40+ minutes

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -22,42 +22,22 @@
         echo '/swapfile none swap sw 0 0' | sudo tee -a /etc/fstab
       changed_when: false
 
-    - name: Update system packages (with swap enabled)
-      ansible.builtin.dnf:
-        name: "*"
-        state: present
-        update_cache: true
+    - name: Skip system package update (too slow on micro instance)
+      ansible.builtin.shell: |
+        echo "Skipping system package update on micro instance - too slow"
+        echo "Installing only essential packages..."
+      changed_when: false
 
-    - name: Install Docker
-      ansible.builtin.dnf:
-        name: docker
-        state: present
-
-    - name: Install Docker Compose
-      ansible.builtin.dnf:
-        name: docker-compose
-        state: present
-
-    - name: Install basic tools
+    - name: Install essential packages only
       ansible.builtin.dnf:
         name:
+          - docker
+          - docker-compose
           - git
           - curl
-          - wget
-          - unzip
+          - firewalld
         state: present
-
-    - name: Install firewalld
-      ansible.builtin.dnf:
-        name: firewalld
-        state: present
-
-    - name: Install certbot
-      ansible.builtin.dnf:
-        name:
-          - certbot
-          - python3-certbot-dns-cloudflare
-        state: present
+        update_cache: false
 
     - name: Start and enable Docker service
       ansible.builtin.systemd:
