Fix YAML linting error in Ansible playbook
- Fix line length issue in Docker Compose URL
- Use YAML folded scalar for long URL
- Ensure yamllint compliance

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -40,7 +40,9 @@
 
     - name: Install Docker Compose manually
       ansible.builtin.get_url:
-        url: "https://github.com/docker/compose/releases/download/v{{ docker_compose_version }}/docker-compose-linux-x86_64"
+        url: >-
+          https://github.com/docker/compose/releases/download/
+          v{{ docker_compose_version }}/docker-compose-linux-x86_64
         dest: /usr/local/bin/docker-compose
         mode: "0755"
         owner: root
